--- a/TestMVC/Views/Home/Index.cshtml
+++ b/TestMVC/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to test MVC Page</h1>
-    <p>Learn about <a href="test.cshtml">Test</a>.</p>
+    <h1 class="display-4">Welcome to Test Model View Controller Page</h1>
+
 
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
